@@ -9,10 +9,6 @@ target/
 .idea
 *.iml
 
-# jasmine-maven-plugin uses phantomjs-maven-plugin.
-# phantomjs-maven-plugin creates this log file.
-phantomjsdriver.log
-
 # minified resources
 src/main/webapp/WEB-INF/static/styles/*.min.css
 src/main/javascript/*.min.js
