@@ -1,5 +1,6 @@
 0.x (upcoming release)
 
+- (infrastructure) port JavaScript unit tests from Jasmine to Jest
 
 0.4.6
 - (feature)        users can add a comment to a series
